--- a/index.html
+++ b/index.html
@@ -2,12 +2,71 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Manage landing page</title>
+
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;700&display=swap" rel="stylesheet">
+  <!-- /Fonts -->
+
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+  <header>
+    <img src="./images/logo.svg" alt="logo">
+    <button class="hamburger">
+      <div class="top"></div>
+      <div class="middle"></div>
+      <div class="bottom"></div>
+    </button>
+    <nav>
+      <a href="#">Pricing</a>
+      <a href="#">Product</a>
+      <a href="#">About Us</a>
+      <a href="#">Careers</a>
+      <a href="#">Community</a>
+    </nav>
+  </header>
+  <main>
+    <section class="section-one">
+      <div>
+        <h1>Bring everyone together to build better products</h1>
+        <p>Manage makes it simple for software teams to plan day-to-day tasks while keeping the larger team goals in view.</p>
+        <button>Get Started</button>
+      </div>
+      <img src="./images/illustration-intro.svg" alt="illustration-intro">
+    </section>
+    <section>
+      <h2>What's different about Manage?</h2>
+      <p>Manage provides all the functionality your team needs, without the complexity. Our software is tailor-made for modern digital product teams.</p>
+    </section>
+    <section>
+      <ol>
+        <li>
+          <div>
+            <span>01</span>
+            <p>Track company-wide progress</p>
+          </div>
+          <p>See how your day-to-day tasks fit into the wider vision. Go from tracking progress at the milestone level all the way done to the smallest of details. Never lose sight of the bigger picture again.</p>
+        </li>
+        <li>
+          <div>
+            <span>02</span>
+            <p>Advanced built-in reports</p>
+          </div>
+          <p>Set internal delivery estimates and track progress toward company goals. Our customisable dashboard helps you build out the reports you need to keep key stakeholders informed.</p>
+        </li>
+        <li>
+          <div>
+            <span>03</span>
+            <p>Everything you need in one place</p>
+          </div>
+          <p>Stop jumping from one service to another to communicate, store files, track tasks and share documents. Manage offers an all-in-one team productivity solution.</p>
+        </li>
+      </ol>
+    </section>
+  </main>
 </body>
 </html>
